--- a/index.html
+++ b/index.html
@@ -1,24 +1,5 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2016 Adobe Systems Incorporated. All rights reserved.
 
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html lang="es">
 
 <head>
@@ -38,15 +19,15 @@
     -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Formulario PhoneGap</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 </head>
 
 <body>
 
-    <form action="#" method="post">
-        <fieldset>
+<form action="#" method="post" class="usuario">
+        <fieldset data-role="controlgroup">
             <legend><strong>Datos de acceso</strong></legend>
             <hr>
             <label>Usuario:</label><input type="text" placeholder="Nombre de Usuario"> <br>
@@ -55,16 +36,21 @@
             <label>Repite Contraseña:</label><input type="password" placeholder="Repite contraseña">
             <br><br>
             <div class="capaBotones">
-                <input class="boton1" type="reset" value="Limpiar"><input class="boton2" type="submit" value="Continuar" onClick="window.location.href='siguiente.html'">
+            <input class="boton1" type="reset" value="Limpiar"><input class="boton2" type="submit" value="Continuar" onClick="window.location.href='siguiente.html'">
             </div>
         </fieldset>
     </form>
 
 
 
-
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <script type="text/javascript">
+        app.initialize();
+
+    </script>
 </body>
 
 </html>
